<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="CountryDetailsViewModel"
            type="com.ezatpanah.restcountriesaapi_mvvm.viewmodel.CountryDetailsViewModel" />

        <variable
            name="CountryDetailsResponse"
            type="com.ezatpanah.restcountriesaapi_mvvm.response.CountryDetailsResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.country_detailes.CountryDetailFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Country Detail" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homeContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/imgLayout"
                android:layout_width="250dp"
                android:layout_height="150dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgFlag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/placeholder"
                    app:loadFlag="@{CountryDetailsResponse.Flags.png}" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvCountryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@{CountryDetailsResponse.name.official}"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgLayout" />

            <TextView
                android:id="@+id/tvCapitalName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@{CountryDetailsResponse.capital[0]}"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCountryName" />


            <TextView
                android:id="@+id/tvTitleRegion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/region"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCapitalName" />

            <TextView
                android:id="@+id/tvRegion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@{CountryDetailsResponse.region}"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvTitleRegion"
                app:layout_constraintStart_toEndOf="@id/tvTitleRegion" />

            <TextView
                android:id="@+id/tvTitleSubRegion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/subregion"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleRegion" />

            <TextView
                android:id="@+id/tvSubRegion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@{CountryDetailsResponse.subregion}"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvTitleSubRegion"
                app:layout_constraintStart_toEndOf="@id/tvTitleSubRegion" />


            <TextView
                android:id="@+id/tvTitlePopulation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/population"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleSubRegion" />


            <TextView
                android:id="@+id/tvPopulation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@{CountryDetailsResponse.population}"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvTitlePopulation"
                app:layout_constraintStart_toEndOf="@id/tvTitlePopulation" />

            <TextView
                android:id="@+id/tvTitleCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/currency"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitlePopulation" />

            <TextView
                android:id="@+id/tvCurrencyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@{CountryDetailsViewModel.getCountryDetailCurrencies()}"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvTitleCurrency"
                app:layout_constraintStart_toEndOf="@id/tvTitleCurrency" />

            <TextView
                android:id="@+id/tvTitleLanguages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/languages"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleCurrency" />

            <TextView
                android:id="@+id/tvLanguages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@{CountryDetailsViewModel.getCountryDetailLanguages()}"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvTitleLanguages"
                app:layout_constraintStart_toEndOf="@id/tvTitleLanguages" />

            <Button
                android:id="@+id/btnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/open_location_on_map"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleLanguages" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/progressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/noInternet"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/nointernet" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>